@@ -463,6 +463,10 @@ void bx_sdl2_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
     bx_keymap.loadKeymap(convertStringToSDLKey);
   }
 
+  if (!gui_ci) {
+    console.present = 1;
+  }
+
   // parse sdl specific options
   if (argc > 1) {
     for (i = 1; i < argc; i++) {
@@ -494,6 +498,8 @@ void bx_sdl2_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
 #endif
       } else if (!strcmp(argv[i], "cmdmode")) {
         command_mode.present = 1;
+      } else if (!strcmp(argv[i], "no_gui_console")) {
+        console.present = 0;
       } else {
         BX_PANIC(("Unknown sdl2 option '%s'", argv[i]));
       }
@@ -507,8 +513,6 @@ void bx_sdl2_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
 #endif
   if (gui_ci) {
     dialog_caps = BX_GUI_DLG_ALL;
-  } else {
-    console.present = 1;
   }
   sdl_init_done = 1;
 }
