@@ -236,6 +236,8 @@ void bx_vncsrv_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
     }
   }
 
+  console.present = 1;
+
   // parse vncsrv specific options
   if (argc > 1) {
     for (i = 1; i < argc; i++) {
@@ -251,6 +253,8 @@ void bx_vncsrv_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
         BX_INFO(("hide IPS display in status bar"));
         rfbHideIPS = 1;
 #endif
+      } else if (!strcmp(argv[i], "no_gui_console")) {
+        console.present = 0;
       } else {
         BX_PANIC(("Unknown rfb option '%s'", argv[i]));
       }
@@ -321,7 +325,6 @@ void bx_vncsrv_gui_c::specific_init(int argc, char **argv, unsigned headerbar_y)
 
   new_gfx_api = 1;
   new_text_api = 1;
-  console.present = 1;
 }
 
 void bx_vncsrv_gui_c::handle_events(void)
